syntax = "proto3";
package role;

option go_package = "nfxid/protos/gen/auth/role;rolepb";

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";

// 角色信息
message Role {
  string id = 1; // 角色ID (UUID)
  string name = 2; // 角色名称
  optional string description = 3; // 角色描述
  repeated string permissions = 4; // 权限列表（JSONB 数组）
  bool is_system = 5; // 是否为系统角色
  google.protobuf.Timestamp created_at = 6; // 创建时间
  google.protobuf.Timestamp updated_at = 7; // 更新时间
  optional google.protobuf.Timestamp deleted_at = 8; // 软删除时间
}

// Role 服务 - 供其他服务通过 gRPC 管理角色
service RoleService {
  // 根据ID获取角色
  rpc GetRoleByID (GetRoleByIDRequest) returns (GetRoleByIDResponse);
  
  // 根据名称获取角色
  rpc GetRoleByName (GetRoleByNameRequest) returns (GetRoleByNameResponse);
  
  // 批量获取角色
  rpc BatchGetRoles (BatchGetRolesRequest) returns (BatchGetRolesResponse);
  
  // 获取所有角色列表
  rpc GetAllRoles (GetAllRolesRequest) returns (GetAllRolesResponse);
}

// Role Service Messages
message GetRoleByIDRequest {
  string role_id = 1 [(buf.validate.field).string.uuid = true];
}

message GetRoleByIDResponse {
  Role role = 1;
}

message GetRoleByNameRequest {
  string name = 1 [(buf.validate.field).string.min_len = 1, (buf.validate.field).string.max_len = 100];
}

message GetRoleByNameResponse {
  Role role = 1;
}

message BatchGetRolesRequest {
  repeated string role_ids = 1 [(buf.validate.field).repeated = {min_items: 1, max_items: 100}];
}

message BatchGetRolesResponse {
  repeated Role roles = 1;
  map<string, string> error_by_id = 2; // role_id -> error_message
}

message GetAllRolesRequest {
  int32 page = 1 [(buf.validate.field).int32.gte = 1];
  int32 page_size = 2 [(buf.validate.field).int32 = {gte: 1, lte: 100}];
  optional string search = 3; // 搜索角色名称或描述
  optional bool is_system = 4; // 过滤系统角色
}

message GetAllRolesResponse {
  repeated Role roles = 1;
  int32 total = 2;
}

